--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -11,7 +11,7 @@
 	.site-header__logo,
 	.site-header__title{
 		position:relative;
-		left: -8.25rem;
+		left: -7.25rem;
 	}
 }
 
